@@ -1,3 +1,9 @@
+2008-04-25  Luca Bruno  <lethalman88@gmail.com>
+
+        * syx/syx-memory.c (_syx_memory_read): read framePointer variables
+        (syx_memory_load_image): free lazy pointers
+        (struct SyxMemoryLazyPointer): added
+
 2008-04-23  Luca Bruno  <lethalman88@gmail.com>
 
         * syx/syx-memory.c (enum SyxMemoryType): added
